switched the placing for POST /users and GET /users
