# backend/public/docs/openapi.json
@@ -70,33 +70,6 @@
       }
     },
     "/users": {
-      "get": {
-        "summary": "Get all users",
-        "operationId": "getAllUsers",
-        "tags": [
-          "Users"
-        ],
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "A list of users",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/User"
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
       "post": {
         "summary": "Create a new user",
         "operationId": "createUser",
@@ -129,6 +102,33 @@
           },
           "409": {
             "description": "User with this email or messenger ID already exists"
+          }
+        }
+      },
+      "get": {
+        "summary": "Get all users",
+        "operationId": "getAllUsers",
+        "tags": [
+          "Users"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of users",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/User"
+                  }
+                }
+              }
+            }
           }
         }
       }
